; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dvdec.c_bit_copy.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dvdec.c_bit_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MIN_CACHE_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @bit_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bit_copy(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @get_bits_left(i32* %6)
  store i32 %7, i32* %5, align 4
  br label %8

8:                                                ; preds = %12, %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @MIN_CACHE_BITS, align 4
  %11 = icmp sge i32 %9, %10
  br i1 %11, label %12, label %22

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @MIN_CACHE_BITS, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @MIN_CACHE_BITS, align 4
  %17 = call i32 @get_bits(i32* %15, i32 %16)
  %18 = call i32 @put_bits(i32* %13, i32 %14, i32 %17)
  %19 = load i32, i32* @MIN_CACHE_BITS, align 4
  %20 = load i32, i32* %5, align 4
  %21 = sub nsw i32 %20, %19
  store i32 %21, i32* %5, align 4
  br label %8

22:                                               ; preds = %8
  %23 = load i32, i32* %5, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %25, label %32

25:                                               ; preds = %22
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32*, i32** %4, align 8
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @get_bits(i32* %28, i32 %29)
  %31 = call i32 @put_bits(i32* %26, i32 %27, i32 %30)
  br label %32

32:                                               ; preds = %25, %22
  ret void
}

declare dso_local i32 @get_bits_left(i32*) #1

declare dso_local i32 @put_bits(i32*, i32, i32) #1

declare dso_local i32 @get_bits(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
